Spaltenauswahl mit Close-Button, update, create

--- a/club-manager/src/app/app.component.html
+++ b/club-manager/src/app/app.component.html
@@ -128,7 +128,7 @@
 <!-- Fußzeile -->
 <ng-container >
   <div class="footer">
-      Message from Service : {{searchText}}
+      {{statusText}}
   </div>
 </ng-container>
 
