--- a/club-manager/src/app/members/member-columns/member-columns.component.html
+++ b/club-manager/src/app/members/member-columns/member-columns.component.html
@@ -1,6 +1,13 @@
-<p class="sidebar-base">Spalten auswählen</p>
-<form [formGroup]="myForm" (ngSubmit)="onFormSubmit()">
+<mat-toolbar color="Snow">
+  <span>Spalten auswählen</span>
+  <button mat-icon-button class="close-button" (click)="onClose()">
+    <mat-icon>
+    close
+    </mat-icon>
+  </button>
+</mat-toolbar>
 
+<form [formGroup]="myForm" (ngSubmit)="onFormSubmit()">
   <mat-selection-list color="primary" formControlName="selectedFields" >
     <mat-list-option  *ngFor="let col of fieldList"
         [selected]="col.Visible"
@@ -9,5 +16,5 @@
       </mat-list-option>
   </mat-selection-list>
 
-  <button mat-raised-button type="submit"  color="warn" class="apply-button">Übernehmen</button>
+  <button mat-raised-button type="submit" color="warn" class="apply-button">Übernehmen</button>
 </form>
