--- a/club-manager/src/app/members/member-table/member-table.component.scss
+++ b/club-manager/src/app/members/member-table/member-table.component.scss
@@ -60,22 +60,35 @@
 }
 
 // Spaltenbreiten
-.mat-column-Familyname {
-  padding-left: 20px;
-  padding-right: 20px;
-  //width : 320px;
+.W50 {
+  width : 50px;
 }
-.mat-column-Firstname {
-  width : 320px;
+
+.W75 {
+  width : 75px;
 }
-.mat-column-Street {
-  width : 320px;
+
+.W100 {
+  width : 100px;
 }
-.mat-column-Zipcode {
-  padding-left: 20px;
-  padding-right: 20px;
-  //width : 100px;
+
+.W150 {
+  width : 150px;
 }
-.mat-column-City {
+
+.W200 {
+  width : 200px;
+}
+
+.W250 {
+  width : 250px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
+
+.W300 {
   width : 300px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
+
