Header für Miglieder anlegen, Tab für Detailansicht

--- a/club-manager/src/app/app.component.html
+++ b/club-manager/src/app/app.component.html
@@ -110,6 +110,11 @@
       <cl-statistic-header></cl-statistic-header>
     </div>
   </span>
+  <span *ngSwitchCase="11">
+    <div class="header">
+      <cl-member-create-header></cl-member-create-header>
+    </div>
+  </span>
 </ng-container>
 
 <!-- Arbeitsbereich -->
