--- a/club-manager/src/app/members/member-view/member-view.component.html
+++ b/club-manager/src/app/members/member-view/member-view.component.html
@@ -1,7 +1,5 @@
-<!-- Workspace -->
 <ng-container>
   <div class="table-base">
-    <cl-member-table    [filter]="search" >
-    </cl-member-table>
+    <cl-member-table [filter]="search"></cl-member-table>
   </div>
  </ng-container>
