--- a/club-manager/src/app/members/member-details/member-details.component.html
+++ b/club-manager/src/app/members/member-details/member-details.component.html
@@ -1,81 +1,84 @@
 <form [formGroup]="myForm" (ngSubmit)="onFormSubmit()">
+  <mat-tab-group>
+    <mat-tab label="Allgemein">
+      <p>
+        <mat-form-field class="full-width">
+          <mat-label>Anrede</mat-label>
+          <input matInput formControlName="gender">
+          <mat-error *ngIf="myForm.get('gender').hasError('required')">
+            Anrede erforderlich
+          </mat-error>
+        </mat-form-field>
 
- <!--<fieldset formAGroupName ="base"> -->
-    <p>
+        <mat-form-field class="full-width">
+          <mat-label>Titel</mat-label>
+          <input matInput formControlName="title">
+        </mat-form-field>
+      </p>
+
+      <p>
+        <mat-form-field class="full-width">
+          <mat-label>Vorname</mat-label>
+          <input matInput formControlName="firstname">
+          <mat-error *ngIf="myForm.get('firstname').hasError('required')">
+            Vorname ist erforderlich!
+          </mat-error>
+        </mat-form-field>
+      </p>
+
+      <p>
+        <mat-form-field class="full-width">
+          <mat-label>Nachname</mat-label>
+          <input matInput formControlName="familyname">
+          <mat-error *ngIf="myForm.get('familyname').hasError('required')">
+            Nachname ist erforderlich!
+          </mat-error>
+        </mat-form-field>
+      </p>
+
+      <p>
+        <mat-form-field class="full-width">
+          <mat-label>Straße</mat-label>
+          <input matInput formControlName="street">
+        </mat-form-field>
+      </p>
+
+      <p>
+        <mat-form-field class="full-width">
+          <mat-label>PLZ</mat-label>
+          <input matInput formControlName="zipcode">
+        </mat-form-field>
+      </p>
+
+      <p>
+        <mat-form-field class="full-width">
+          <mat-label>Ort</mat-label>
+          <input matInput formControlName="city">
+        </mat-form-field>
+      </p>
+    </mat-tab>
+
+    <mat-tab label="Ehrungen">
       <mat-form-field class="full-width">
-        <mat-label>Anrede</mat-label>
-        <input matInput formControlName="gender">
-        <mat-error *ngIf="myForm.get('gender').hasError('required')">
-          Anrede erforderlich
-        </mat-error>
+        <mat-label>Bronze</mat-label>
+        <input matInput formControlName="bronze">
       </mat-form-field>
 
       <mat-form-field class="full-width">
-        <mat-label>Titel</mat-label>
-        <input matInput formControlName="title">
+        <mat-label>Silber</mat-label>
+        <input matInput formControlName="silver">
       </mat-form-field>
-    </p>
 
-    <p>
       <mat-form-field class="full-width">
-        <mat-label>Vorname</mat-label>
-        <input matInput formControlName="firstname">
-        <mat-error *ngIf="myForm.get('firstname').hasError('required')">
-          Vorname ist erforderlich!
-        </mat-error>
+        <mat-label>Gold</mat-label>
+        <input matInput formControlName="gold">
       </mat-form-field>
-    </p>
+    </mat-tab>
 
-    <p>
-      <mat-form-field class="full-width">
-        <mat-label>Nachname</mat-label>
-        <input matInput formControlName="familyname">
-        <mat-error *ngIf="myForm.get('familyname').hasError('required')">
-          Nachname ist erforderlich!
-        </mat-error>
-      </mat-form-field>
-    </p>
+    <mat-tab label="Historie">
+      Historie-Daten
+    </mat-tab>
 
-    <p>
-      <mat-form-field class="full-width">
-        <mat-label>Straße</mat-label>
-        <input matInput formControlName="street">
-      </mat-form-field>
-    </p>
-
-    <p>
-      <mat-form-field class="full-width">
-        <mat-label>PLZ</mat-label>
-        <input matInput formControlName="zipcode">
-      </mat-form-field>
-    </p>
-
-    <p>
-      <mat-form-field class="full-width">
-        <mat-label>Ort</mat-label>
-        <input matInput formControlName="city">
-      </mat-form-field>
-    </p>
- <!--</fieldset>-->
-<!--
-  <fieldset formAGroupName ="honour">
-
-    <mat-form-field class="full-width">
-      <mat-label>Bronze</mat-label>
-      <input matInput formControlName="bronze">
-    </mat-form-field>
-
-    <mat-form-field class="full-width">
-      <mat-label>Silber</mat-label>
-      <input matInput formControlName="silver">
-    </mat-form-field>
-
-    <mat-form-field class="full-width">
-      <mat-label>Gold</mat-label>
-      <input matInput formControlName="gold">
-    </mat-form-field>
-
-  </fieldset>
-    -->
+  </mat-tab-group>
   <button mat-raised-button type="submit" color="warn" class="apply-button">Übernehmen</button>
 </form>
