--- a/club-manager/src/app/members/member-table/member-table.component.scss
+++ b/club-manager/src/app/members/member-table/member-table.component.scss
@@ -18,16 +18,18 @@
   height: 40px;
 }
 
-.pag-base {
-  position: fixed;
+.table-row:hover {
+  background-color: rgba(0, 0, 0, .05);
+  cursor: pointer;
 }
 
-.bottom-row {
-  bottom: 0px;
-  min-height: 35px;
-  height: 35px;
-  font-family: 'Arial Black', Helvetica, sans-serif;
-  z-index: 50;
+.pag-base {
+  border: 2px;
+  border-style: solid;
+  border-color: var(--primary); ;
+  position: fixed;
+  bottom: 30px;
+  max-height: 70px;
 }
 
 /* Animate items as they're being sorted. */
@@ -60,6 +62,10 @@
 }
 
 // Spaltenbreiten
+.W25 {
+  width : 25px;
+}
+
 .W50 {
   width : 50px;
 }
