--- a/club-manager/src/app/members/member-header/member-header.component.scss
+++ b/club-manager/src/app/members/member-header/member-header.component.scss
@@ -14,6 +14,10 @@
   margin-left: 20px;
 }
 
+.add-icon:hover {
+  background-color: snow;
+}
+
 .search {
   margin-top: 8px;
   margin-left: 100px;
