History in Dashboard u. Mitglied, Validierung

--- a/club-manager/src/app/app.component.html
+++ b/club-manager/src/app/app.component.html
@@ -115,6 +115,11 @@
       <cl-member-create-header></cl-member-create-header>
     </div>
   </span>
+  <span *ngSwitchCase="12">
+    <div class="header">
+      <cl-member-update-header></cl-member-update-header>
+    </div>
+  </span>
 </ng-container>
 
 <!-- Arbeitsbereich -->
