--- a/club-manager/src/app/dashboard/dashboard/dashboard.component.html
+++ b/club-manager/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,14 @@
+<div class="history-modul">
+  <h4>&nbsp;&nbsp;Letzte Benutzung</h4>
+  <cl-history-list></cl-history-list>
+</div>
 
-<h3>Letzte Benutzung</h3>
-<h3>Anzahl Mitglieder</h3>
-<h3>Anzahl Gruppen</h3>
-<h4>und mehr ...</h4>
+<div class="statistic-modul">
+  <div id="stati-content">
+    <h4>Statistik</h4>
+    Anzahl Mitglieder<br>
+    Anzahl Gruppen<br>
+    und mehr ...<br>
+  </div>
+</div>
+
