--- a/club-manager/src/app/members/member-create/member-create.component.scss
+++ b/club-manager/src/app/members/member-create/member-create.component.scss
@@ -35,3 +35,11 @@
 .ok-button {
   margin-left: 16px;
 }
+
+.icon-button {
+  margin-left: 16px;
+}
+
+.icon-button:hover {
+  color: rgb(236, 81, 81);
+}
