--- a/club-manager/src/app/members/member-table/member-table.component.scss
+++ b/club-manager/src/app/members/member-table/member-table.component.scss
@@ -26,7 +26,7 @@
 .pag-base {
   border: 2px;
   border-style: solid;
-  border-color: var(--primary); ;
+  border-color: var(--primary);
   position: fixed;
   bottom: 30px;
   max-height: 70px;
