--- a/club-manager/src/app/app.component.html
+++ b/club-manager/src/app/app.component.html
@@ -120,6 +120,11 @@
       <cl-member-update-header></cl-member-update-header>
     </div>
   </span>
+  <span *ngSwitchCase="99">
+    <div class="header">
+      <cl-settings-header></cl-settings-header>
+    </div>
+  </span>
 </ng-container>
 
 <!-- Arbeitsbereich -->
