--- a/club-manager/src/app/_general/theme-switch/theme-switch.component.html
+++ b/club-manager/src/app/_general/theme-switch/theme-switch.component.html
@@ -1,4 +1,4 @@
-<mat-button-toggle-group  size="small" name="theme" aria-label="Theme Selection" [value]="theme">
+<mat-button-toggle-group  appearance="legacy" size="small" name="theme" aria-label="Theme Selection" [value]="theme">
   <mat-button-toggle  value="light" (click)="selectLightTheme()">Light</mat-button-toggle>
   <mat-button-toggle  value="dark" (click)="selectDarkTheme()">Dark</mat-button-toggle>
 </mat-button-toggle-group>
