--- a/club-manager/src/app/members/member-columns/member-columns.component.html
+++ b/club-manager/src/app/members/member-columns/member-columns.component.html
@@ -16,5 +16,5 @@
       </mat-list-option>
   </mat-selection-list>
 
-  <button mat-raised-button type="submit" color="warn" class="apply-button">Übernehmen</button>
+  <button mat-raised-button type="submit" color="primary" class="apply-button">Übernehmen</button>
 </form>
