--- a/club-manager/src/app/members/member-groups/member-groups.component.scss
+++ b/club-manager/src/app/members/member-groups/member-groups.component.scss
@@ -1,4 +1,6 @@
+@import '../../_shared/variables.sass';
+
 .sidebar-base {
   margin-top: 50px;
-  background-color: rgb(255, 0, 0);
+  background-color: var(--primary);
 }
