Historie für Mitglieder

--- a/club-manager/src/app/dashboard/dashboard/dashboard.component.html
+++ b/club-manager/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="history-modul">
   <h4>&nbsp;&nbsp;Letzte Benutzung</h4>
-  <cl-history-list></cl-history-list>
+  <cl-history-list [modeSwitch]="mode"></cl-history-list>
 </div>
 
 <div class="statistic-modul">
