--- a/club-manager/src/app/members/member-update/member-update.component.html
+++ b/club-manager/src/app/members/member-update/member-update.component.html
@@ -317,7 +317,7 @@
 
       <div class="history-modul">
         <mat-label>Änderungen</mat-label>
-        <cl-history-list></cl-history-list>
+        <cl-history-list  [modeSwitch]="mode" [recordValue]="recordId" ></cl-history-list>
       </div>
 
     </div>
