--- a/club-manager/src/app/members/member-table/member-table.component.html
+++ b/club-manager/src/app/members/member-table/member-table.component.html
@@ -1,21 +1,24 @@
-<table mat-table class="table-container" [dataSource]="members$" matSort (matSortChange)="sortData($event)"
-  cdkDropList cdkDropListLockAxis="x" cdkDropListOrientation="horizontal" (cdkDropListDropped)="dropListDropped($event)">
+<div class="table-container">
+  <table mat-table [dataSource]="members$" matSort (matSortChange)="sortData($event)"
+    cdkDropList cdkDropListLockAxis="x" cdkDropListOrientation="horizontal" (cdkDropListDropped)="dropListDropped($event)">
 
-  <!-- Header -->
-  <ng-container [matColumnDef]="col.Name" *ngFor="let col of displayedColumns; let i = index" >
-    <th mat-header-cell mat-sort-header *matHeaderCellDef
-        cdkDrag (cdkDragStarted)="dragStarted($event)" [cdkDragData]="{name: col.Name}">
-        {{col.Label}}
-    </th>
-    <td mat-cell [class]="col.Width" *matCellDef="let member">{{member[col.Name]}}
-      <!-- <div *ngIf="i==0"><button mat-icon-button color="primary" (click)="editMember(col)" title="Edit Contact"><mat-icon>edit</mat-icon></button></div> -->
-    </td>
-  </ng-container>
+    <!-- Header -->
+    <ng-container [matColumnDef]="col.Name" *ngFor="let col of displayedColumns; let i = index" >
+      <th mat-header-cell mat-sort-header *matHeaderCellDef
+          cdkDrag (cdkDragStarted)="dragStarted($event)" [cdkDragData]="{name: col.Name}">
+          {{col.Label}}
+      </th>
+      <td mat-cell [class]="col.Width" *matCellDef="let member">{{member[col.Name]}}
+        <!-- <div *ngIf="i==0"><button mat-icon-button color="primary" (click)="editMember(col)" title="Edit Contact"><mat-icon>edit</mat-icon></button></div> -->
+      </td>
+    </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumnNames; sticky:true" class="header-row"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumnNames" class="table-row" (click)="editMember(row)"></tr>
-</table>
+    <tr mat-header-row *matHeaderRowDef="displayedColumnNames; sticky:true" class="table-header"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumnNames" class="table-row" (click)="editMember(row)"></tr>
+    <tr mat-footer-row *matFooterRowDef="displayedColumnNames" class="table-footer"></tr>
+  </table>
 
+</div>
 <div class="pag-base">
   <mat-paginator fixed [length]="pageTotalCount" [pageSize]="pageCount" [pageSizeOptions]="[5, 10, 25, 50, 100]">
   </mat-paginator>
