--- a/club-manager/src/app/members/member-header/member-header.component.html
+++ b/club-manager/src/app/members/member-header/member-header.component.html
@@ -4,7 +4,7 @@
   <div class="search">
     <mat-icon class="search-icon">search</mat-icon>Filter:
     <mat-form-field class="search-input">
-    <input  matInput placeholder="nach Vor- und Nachnamen ..." #input>
+    <input  matInput placeholder="nach Vor- und Nachnamen, Kurzname" #input>
   </mat-form-field>
   </div>
 
