Fix History Table Kopfzeile

--- a/club-manager/src/app/_general/history/history-list/history-list.component.html
+++ b/club-manager/src/app/_general/history/history-list/history-list.component.html
@@ -2,7 +2,7 @@
   <table mat-table  [dataSource]="history$">
     <!-- Header -->
     <ng-container [matColumnDef]="col.Name" *ngFor="let col of displayedColumns; let i = index" >
-      <th mat-header-cell *matHeaderCellDef>
+      <th mat-header-cell *matHeaderCellDef [class]="col.Width">
           {{col.Label}}
       </th>
       <td mat-cell [class]="col.Width" *matCellDef="let history">{{history[col.Name]}}
